HSEARCH-5155 Build with JDK 21
Meaning use JDK 21 for building main artifacts; the baseline (JDK 11) will not change.